--- a/views/master.html
+++ b/views/master.html
@@ -9,8 +9,8 @@
       <p>Not just another wordpress</p>
     </header>
 
-    <div>
-      <t:placeholder  t:content />
+    <div class='Page'>
+      <t:placeholder t:content />
     </div>
 
     <footer>Powered by Node, NPM and You</footer>
